--- a/quiz/quiz.css
+++ b/quiz/quiz.css
@@ -27,6 +27,7 @@ flex-direction: column;}
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
 }
 
 .item:hover {
