--- a/quiz/quiz.css
+++ b/quiz/quiz.css
@@ -2,27 +2,25 @@
 
 body {
     font-family: 'Open Sans', sans-serif;
-    margin: auto;
-    display: flex;
-    
-    
-    max-width: 360px;
-    flex-direction: column;
-    font-weight: bold;}
+    margin: auto;     
+    font-weight: bold;
+    max-width: 760px;
+    width: 95vw;
+    display: grid;
+    grid-template-rows: 1fr 1fr;}
+
+#quiz {align-self: end;}
 
 .divresposta {
     display: none;
 }
 
 .options {
-    display: flex; 
-    flex-direction: column;
-    gap: 10px;
-    flex-wrap: wrap;
-}
+    display: grid; 
+    gap: 5px;
+    grid-template-rows: 1fr 1fr 1fr;height: 20vh;}
 
 .item {
-    height: 30px;
     padding: 10px 1px;
     display: flex;
     justify-content: center;
@@ -33,16 +31,22 @@ body {
     color: white;
     text-shadow: black 1px 1px 3px;
     transition: all 0.5s ease-in 0s;
-    border: 3px solid white;}
-
+    border: 3px solid white;
+}
 
 .item:hover {
     filter: saturate(0.3);
-    border: 3px solid #eeeeee;
+}
+
+.clicado {
+    filter: saturate(0.1);
+}
+
+.inativo {
+    pointer-events: none;
 }
 
 .animabg{animation: changeBg 30s infinite;}
-.animabgde{animation: changeBgDe 30s infinite;}
 
 @keyframes changeBg{
   0%,100%  {background-position: 50% 0%;}
@@ -50,12 +54,4 @@ body {
   50% {background-position: 50% 35%;}
   75% {background-position: 50% 65%;}
   90% {background-position: 50% 80%;}
-}
-
-@keyframes changeBgDe{
-    0%,100%  {background-position: 50% 17%;}
-    25% {background-position: 50% 28%;}
-    50% {background-position: 50% 65%;}
-    75% {background-position: 50% 75%;}
-    90% {background-position: 50% 100%;}
 }
