--- a/quiz/quiz.css
+++ b/quiz/quiz.css
@@ -4,10 +4,10 @@ body {
     font-family: 'Open Sans', sans-serif;
     margin: auto;     
     font-weight: bold;
-    max-width: 760px;
+    max-width: 360px;
     width: 95vw;
     display: grid;
-    grid-template-rows: 1fr 1fr;}
+    grid-template-rows: 1fr 1fr;font-size: 14px;}
 
 #quiz {align-self: end;}
 
@@ -15,43 +15,66 @@ body {
     display: none;
 }
 
+.grafico{
+    display: grid;
+    grid-template-columns: 60px 1fr;
+    position: relative;
+    left: -60px;
+    color:white;}
+
+.legenda {
+    display: grid; 
+    gap: 10px;
+    grid-template-rows: 1fr 1fr 1fr;
+}
+
+.valor {align-self: center;}
+
 .options {
     display: grid; 
-    gap: 5px;
-    grid-template-rows: 1fr 1fr 1fr;height: 20vh;}
+    gap: 10px;
+    grid-template-rows: 1fr 1fr 1fr;
+    width: 1fr;
+}
 
 .item {
-    padding: 10px 1px;
+    padding: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    color: white;
     background-size: cover;
     font-weight: bold;
-    color: white;
-    text-shadow: black 1px 1px 3px;
+    text-shadow: black 1px 1px 4px;
     transition: all 0.5s ease-in 0s;
-    border: 3px solid white;
-}
+    border: 1px solid black;
+    width: 100%;height: 20px;box-sizing: border-box;}
 
 .item:hover {
     filter: saturate(0.3);
-}
-
-.clicado {
-    filter: saturate(0.1);
 }
 
 .inativo {
     pointer-events: none;
 }
 
+.animagraf {transition: all 5s ease-in 0s;left: 0px;color:black;}
+
+.us {transition: all 5s ease-in 0s;}
+
+.cn {transition: all 5s ease-in 0s;width: calc(95% * (1686/2294));}
+
+.gb {transition: all 5s ease-in 0s;width: calc(95% * (311/2294));}
+
+.cn {transition: all 5s ease-in 0s;width: calc(95% * (1686/2294));}
+
 .animabg{animation: changeBg 30s infinite;}
 
 @keyframes changeBg{
   0%,100%  {background-position: 50% 0%;}
-  25% {background-position: 50% 15%;}
-  50% {background-position: 50% 35%;}
-  75% {background-position: 50% 65%;}
-  90% {background-position: 50% 80%;}
+  25% {background-position: 50% 5%;}
+  50% {background-position: 50% 10%;}
+  75% {background-position: 50% 20%;}
+  90% {background-position: 50% 35%;}
 }
