--- a/quiz/quiz.css
+++ b/quiz/quiz.css
@@ -2,39 +2,54 @@
 
 body {
     font-family: 'Open Sans', sans-serif;
-    margin: auto;     
-    font-weight: bold;
-    max-width: 360px;
-    width: 95vw;
+    margin: 10px auto;     
+    max-width: 360px; 
+    padding: 20px;
+    display: grid;
+    align-content: space-between;
+    text-align: center;grid-template-rows: 1fr 1fr;}
     
-    font-size: 14px;padding: 10px 0;}
+@media only screen and (orientation: landscape) and (min-width: 500px) {
+    body {
+        border: 2px solid black;
+        gap: 20px; 
+    }
+}
 
-#quiz {align-self: end;}
+@media only screen and (orientation: landscape) and (max-height: 480px) {
+    body {
+        grid-template-columns: 1fr 1fr;
+        max-width: 100%;
+        margin: 0;
+    }
+}
+
+#quiz {align-self: center;z-index: 0;}
 
 .divresposta {
     display: none;
-}
+    padding: 20px;
+    background-color: antiquewhite;}
 
 .grafico{
     display: grid;
     grid-template-columns: 60px 1fr;
     position: relative;
-    left: -60px;
+    left: -30px;
     color:white;}
 
 .legenda {
     display: grid; 
-    gap: 10px;
-    grid-template-rows: 1fr 1fr 1fr;
-}
+    gap: 5px;
+    grid-template-rows: 1fr 1fr 1fr;}
 
-.valor {align-self: center;}
+.valor {align-self: center;font-size: 12px;}
 
 .options {
     display: grid; 
     gap: 10px;
     grid-template-rows: 1fr 1fr 1fr;
-    width: 1fr;
+    
 }
 
 .item {
@@ -49,7 +64,7 @@ body {
     text-shadow: black 1px 1px 4px;
     transition: all 0.5s ease-in 0s;
     border: 1px solid black;
-    width: 100%;height: 20px;box-sizing: border-box;}
+    width: 100%;height: 30px;box-sizing: border-box;}
 
 .item:hover {
     filter: saturate(0.3);
@@ -57,6 +72,10 @@ body {
 
 .inativo {
     pointer-events: none;
+}
+
+.presposta{
+    font-weight: bold;
 }
 
 .animagraf {transition: all 5s ease-in 0s;left: 0px;color:black;}
@@ -73,8 +92,8 @@ body {
 
 @keyframes changeBg{
   0%,100%  {background-position: 50% 0%;}
-  25% {background-position: 50% 5%;}
-  50% {background-position: 50% 10%;}
-  75% {background-position: 50% 20%;}
-  90% {background-position: 50% 35%;}
+  25% {background-position: 50% 15%;}
+  50% {background-position: 50% 25%;}
+  75% {background-position: 50% 35%;}
+  90% {background-position: 50% 50%;}
 }
